--- a/templates/default.html
+++ b/templates/default.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
 
-<head> 
+<head>
+  <meta charset="UTF-8"> 
   <link rel="stylesheet" href="/normalize.css">
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/prism.css">
